deploy/note-book/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notebook-app-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts: [ "notebook.kakde.eu" ]
      secretName: notebook-kakde-eu-tls
  rules:
    - host: notebook.kakde.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notebook-app
                port:
                  number: 80
