deploy/note-book/notebook-app-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notebook-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - notebook.kakde.eu
      secretName: kakde-eu-notebook-tls
  rules:
    - host: "notebook.kakde.eu"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: notebook-app-first
                port:
                  number: 80
